Kubernetes/ingress/ingress-class.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true" # Optional: Set as default
spec:
  controller: k8s.io/ingress-nginx
