Kubernetes/ingress/node-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: production
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Origin, X-Requested-With, Content-Type, Accept, Authorization, app-id, token, jwttoken, Cache-Control, Content-Type, DNT, If-Modified-Since, Keep-Alive, Origin, User-Agent, SPPYIOQYBR, X-Frame-Options, X-Requested-With, al, accesskey, userid"
    nginx.ingress.kubernetes.io/cors-max-age: "3628800"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, DELETE, OPTIONS, POST, PUT"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - secretName: tls-secret
    hosts:
      - thanosapi.thespartanpoker.in
  ingressClassName: nginx
  rules:
  - host: thanosapi.thespartanpoker.in
    http:
      paths:
        - path: /pokerapi/v1/admin
          pathType: Prefix
          backend:
            service:
              name: node-admin-service
              port:
                number: 80
  - host: thanosapi.thespartanpoker.in
    http:
      paths:
        - path: /pokerapi/v1/adminapi
          pathType: Prefix
          backend:
            service:
              name: node-adminapi-service
              port:
                number: 80
  - host: thanosbannerpanel.thespartanpoker.in
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: node-bannerpanel-service
              port:
                number: 80
  - host: thanosapi.thespartanpoker.in
    http:
      paths:
        - path: /pokerapi/v1/cms
          pathType: Prefix
          backend:
            service:
              name: node-cms-service
              port:
                number: 80
  - host: thanosapi.thespartanpoker.in
    http:
      paths:
        - path: /pokerapi/v1/communication
          pathType: Prefix
          backend:
            service:
              name: node-communication-service
              port:
                number: 80
  - host: thanosapi.thespartanpoker.in
    http:
      paths:
        - path: /pokerapi/v1/spartan_cron_manager
          pathType: Prefix
          backend:
            service:
              name: node-cron-manager-service
              port:
                number: 80
  - host: thanosapi.thespartanpoker.in
    http:
      paths:
        - path: /pokerapi/v1/cron
          pathType: Prefix
          backend:
            service:
              name: node-cron-service
              port:
                number: 80
  - host: thanosapi.thespartanpoker.in
    http:
      paths:
        - path: /pokerapi/v1/game
          pathType: Prefix
          backend:
            service:
              name: node-game-service
              port:
                number: 80
  - host: thanosapi.thespartanpoker.in
    http:
      paths:
        - path: /pokerapi/v1/gamification
          pathType: Prefix
          backend:
            service:
              name: node-gamification-service
              port:
                number: 80
  - host: thanosapi.thespartanpoker.in
    http:
      paths:
        - path: /pokerapi/v1/kyc
          pathType: Prefix
          backend:
            service:
              name: node-kyc-service
              port:
                number: 80
  - host: thanosapi.thespartanpoker.in
    http:
      paths:
        - path: /pokerapi/v1/purchase
          pathType: Prefix
          backend:
            service:
              name: node-purchase-service
              port:
                number: 80
  - host: thanosapi.thespartanpoker.in
    http:
      paths:
        - path: /pokerapi/v1/redeem
          pathType: Prefix
          backend:
            service:
              name: node-redeem-service
              port:
                number: 80
  - host: thanosapi.thespartanpoker.in
    http:
      paths:
        - path: /pokerapi/v1/user
          pathType: Prefix
          backend:
            service:
              name: node-user-service
              port:
                number: 80
  - host: thanosapi.thespartanpoker.in
    http:
      paths:
        - path: /pokerapi/v1/website
          pathType: Prefix
          backend:
            service:
              name: node-website-service
              port:
                number: 80
